--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap");
 
 * {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 /* width */
@@ -27,8 +27,10 @@
 }
 
 body {
-  background-color: #1a1a1a;
+  background-color: #fff;
   color: #fff;
+
+  background-image: url(../images/geometry-bg-pattern.png);
 
   font-size: 14px;
   padding: 0;
@@ -63,8 +65,8 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid #000000;
-  background-color: #1a1a1a;
+  border-bottom: 2px solid #0f2439;
+  background-color: #294b6e;
   text-decoration: none;
   padding: 16px 5%;
   z-index: 999;
@@ -119,12 +121,12 @@ a {
 .nav__link:hover {
   color: rgb(230, 228, 228);
   text-decoration: none;
-  border-color: #845695;
+  border-color: #2b9ee8;
 }
 
 #create__room__btn {
   display: block;
-  background-color: #845695;
+  background-color: #2499ef;
   padding: 8px 24px;
   font-size: 14px;
   font-weight: 500;
@@ -132,7 +134,7 @@ a {
 }
 
 #create__room__btn:hover {
-  background-color: #845695;
+  background-color: #217bb4;
 }
 
 .nav--list {
