--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,6 @@
 body {
   width: 100%;
-  border: 3px solid red;
+  /* border: 3px solid red; */
   height: 100%;
   margin: 0px;
 }
@@ -11,10 +11,10 @@ body {
 }
 
 .body-container {
-  width: 95%;
-  height: 500px;
+  width: 100%;
+  height: 100vh;
   margin: auto;
-  border: 4px solid rgb(17, 144, 223);
+  /* border: 4px solid rgb(17, 144, 223); */
   /* background-color: greenyellow; */
   display: flex;
   justify-content: space-evenly;
